<?xml version="1.0" encoding="UTF-8"?>

<!--
 *
 * See the NOTICE file distributed with this work for additional
 * information regarding copyright ownership.
 *
 * This is free software; you can redistribute it and/or modify it
 * under the terms of the GNU Lesser General Public License as
 * published by the Free Software Foundation; either version 2.1 of
 * the License, or (at your option) any later version.
 *
 * This software is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
 * Lesser General Public License for more details.
 *
 * You should have received a copy of the GNU Lesser General Public
 * License along with this software; if not, write to the Free
 * Software Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA
 * 02110-1301 USA, or see the FSF site: http://www.fsf.org.
 *
-->

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.dirtybrussels</groupId>
    <artifactId>xwiki-nrepl-component</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <name>XWiki nRepl Server</name>
    <description>XWiki nRepl Server Component</description>

    <properties>
        <commons.version>4.0</commons.version>
        <clojure.nailgun.port>2113</clojure.nailgun.port>
    </properties>

    <build>
        <plugins>
            <plugin>
                <groupId>com.theoryinpractise</groupId>
                <artifactId>clojure-maven-plugin</artifactId>
                <version>1.3.8</version>
                <configuration>
                    <warnOnReflection>true</warnOnReflection>
                    <clojureOptions>-Xmx512m -Xms512m -server -XX:PermSize=64M -XX:MaxPermSize=256M -Dfile.encoding=UTF8</clojureOptions>
                    <sourceDirectories>
                        <sourceDirectory>src/main/clojure</sourceDirectory>
                        <sourceDirectory>src/main/java</sourceDirectory>
                    </sourceDirectories>
                    <runWithTests>true</runWithTests>
                    <useTestClasspath>true</useTestClasspath>
                </configuration>
                <executions>
                    <execution>
                        <id>compile</id>
                        <phase>process-resources</phase>
                        <goals>
                            <goal>compile</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>test-clojure</id>
                        <phase>test</phase>
                        <goals>
                            <goal>test</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>2.3.2</version>
                <configuration>
                    <source>1.6</source>
                    <target>1.6</target>
                </configuration>
                <executions>
                    <execution>
                        <id>compile</id>
                        <phase>compile</phase>
                        <goals>
                            <goal>compile</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
    <dependencies>
        <dependency>
            <groupId>org.clojure</groupId>
            <artifactId>clojure</artifactId>
            <version>1.4.0</version>
        </dependency>
        <dependency>
            <groupId>org.clojure</groupId>
            <artifactId>tools.nrepl</artifactId>
            <version>0.2.0-beta2</version>
        </dependency>
        <dependency>
            <groupId>org.xwiki.commons</groupId>
            <artifactId>xwiki-commons-component-api</artifactId>
            <version>4.0</version>
        </dependency>
        <!-- Only needed if some of the component's APIs must be made visible to scripting in wiki pages -->
        <dependency>
            <groupId>org.xwiki.commons</groupId>
            <artifactId>xwiki-commons-script</artifactId>
            <version>3.3</version>
        </dependency>
        <!-- Testing dependencies -->
        <dependency>
            <groupId>org.xwiki.commons</groupId>
            <artifactId>xwiki-commons-test</artifactId>
            <version>4.0</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>vimclojure</groupId>
            <artifactId>server</artifactId>
            <version>2.3.1</version>
            <scope>test</scope>
        </dependency>
    </dependencies>
</project>
